examples/kraken-example/public/templates/errors/index.int
from layouts import master
import locales as str

def render(statusCode, url, err)
  let key = "http_%statusCode"
  let title = str.US_en.errors[key].header
  master(title, body)

  def body
    str.US_en.errors[key].description(url, err)
  end

end
